# Radium-Engine

./: CMakeLists.txt  icons.qrc  parse_results.py  run_scenes.sh
Applications/: CMakeLists.txt
Applications/BBWComputer/: CMakeLists.txt  main.cpp
Applications/MainApplication/: MainApplication.cpp  MainApplication.hpp  main.cpp
Applications/MainApplication/Gui/: MainWindow.cpp  MainWindow.hpp
Applications/Test0/: minimalapp.cpp  minimalradium.cpp
Configs/: alternative.xml  default.xml
Docs/: model.md  radium-as-submodule.md
Plugins/Animation/src/: AnimationComponent.cpp  AnimationComponent.hpp  AnimationPlugin.cpp  AnimationSystem.cpp  AnimationSystem.hpp
Plugins/FancyMesh/: CMakeLists.txt
Plugins/FancyMesh/src/: FancyMeshComponent.cpp  FancyMeshComponent.hpp  FancyMeshPlugin.cpp  FancyMeshPlugin.hpp  FancyMeshSystem.cpp  (+1 more)
Plugins/Skinning/: CMakeLists.txt
Shaders/: BlinnPhong_wire.frag.glsl  Quad.frag.glsl  SimplificationError.frag.glsl  SimplificationError.geom.glsl  SimplificationError.vert.glsl  SphereInterpolation.frag.glsl  SphereInterpolation.geom.glsl  SphereInterpolation.tcs.glsl  SphereInterpolation.tes.glsl  SphereInterpolation.vert.glsl  implicit03.frag.glsl
cmake/: CompileFlags.cmake  FindRadium.cmake  submoduleAssimp.cmake  submodulePatate.cmake
src/: CMakeLists.txt
src/Core/: CoreMacros.hpp  RaCore.hpp
src/Engine/: FrameInfo.hpp  RaEngine.hpp  RadiumEngine.cpp  RadiumEngine.hpp
src/GuiBase/: BaseApplication.cpp  BaseApplication.hpp
src/MainApplication/: MainApplication.cpp
src/PluginBase/: RadiumPluginInterface.hpp
(+427 files in other folders)
